...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uX5-Hi-XBw">
                            <rect key="frame" x="236" y="16.5" width="35" height="26"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="26" id="x39-rX-bHy"/>
                                <constraint firstAttribute="width" constant="35" id="xe5-lN-8aF"/>
                            </constraints>
                            <state key="normal" image="close"/>
                        </button>
                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="fmf-t4-Icr">
                            <rect key="frame" x="24" y="54.5" width="239" height="126"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="😐" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWz-WD-veO">
                                    <rect key="frame" x="94" y="0.0" width="51" height="56.5"/>
...
